# axum_web_template

./: .env  Cargo.toml  README.md  app.yml  cliff.toml
logs/: app.log.2025-10-28
src/: config.rs  error.rs  lib.rs  main.rs
src/handlers/: mod.rs  universal_handler.rs  user_handler.rs
src/middlewares/: mod.rs  path_middleware.rs  request_id.rs  token_verify.rs
src/models/: all_result_model.rs  file_platform_model.rs  mod.rs  user_model.rs
src/repositories/: file_platform_repository.rs  mod.rs  user_repository.rs
src/routes/: mod.rs
src/scheduler/: task.rs
src/services/: file_platform_service.rs  mod.rs
src/util/: jwt.rs  mod.rs  record_to_json.rs
