[package]
name = "show_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
argon2 = { version = "0.5.3", features = ["std"] }
arrow = { version = "57.0.0", features = ["arrow-json", "csv"] }
async-trait = "0.1.89"
axum = { version = "0.8.6", features = ["http2", "query", "tracing", "multipart"] }
axum-extra = { version = "0.10.3", features = ["typed-header"] }
chrono = { version = "0.4.42", features = ["serde"] }
csv = "1.4.0"
datafusion = "50.3.0"
duckdb = { version = "1.4.1", features = ["chrono", "polars", "vtab-full"] }
encoding_rs = "0.8.35"
encoding_rs_io = "0.1.7"
hyper = "1.7.0"
jwt-simple = "0.12.12"
linfa = "0.8.0"
ndarray = "0.16.1"
ring = "0.17.14"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio", "tls-rustls", "mysql"] }
thiserror = "2.0.17"
timer = "0.2.0"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-cron-scheduler = "0.15.1"
tokio-util = "0.7.16"
tower = { version = "0.5.2", features = ["timeout", "buffer", "limit"] }
tower-batch = "0.1.0"
tower-http = { version = "0.6.6", features = ["compression-full", "fs", "timeout", "trace"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["v7", "serde"] }
walkdir = "2.5.0"
